# pollux

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  NAME.md  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py  index.md
docs/_static/: .gitignore
docs/_static/Logo-ideas/: Pollux-logo-3-favicon.ai  Pollux-logo-3.ai
docs/api/: data.md  index.md  models.md
docs/haniyeh_codes/: Ca_triplets.ipynb  getting_data.ipynb  lux_tutorial_haniyeh.ipynb  lux_tutorial_haniyeh_no_ca_masking.ipynb  which_elements_are_good_in_sdss.ipynb
docs/haniyeh_codes/Aida_codes/: rvs_pollux.py
docs/haniyeh_codes/Feb11/: dwarfs_model_less_elements.ipynb  dwarfs_model_more_elements.ipynb  getting_data_revised_reliable_and_most_reliable.ipynb  giants_model_less_elements.ipynb  giants_model_more_elements.ipynb
docs/haniyeh_codes/Feb18/: giants_model_more_elements_iterative_opt.ipynb  process_rvs.py
docs/haniyeh_codes/Feb4/: dwarfs_model.ipynb  getting_data_revised.ipynb  getting_data_revised_with_examples.ipynb  giants_model.ipynb
docs/haniyeh_codes/Mar18/: lines_visual.ipynb  matrix_mask_for_Fe.ipynb  matrix_mask_for_Fe_Si.ipynb  matrix_mask_for_all_els_giants.ipynb  matrix_mask_for_all_els_giants_smaller_offset.ipynb  matrix_mask_for_all_els_no_ce.ipynb  matrix_test.ipynb
docs/haniyeh_codes/untidy_codes/: Lux-tutorial-Haniyeh-plays.ipynb  Lux-tutorial-Haniyeh-plays_all_labels.ipynb  aida_tutorial_example.ipynb  haniyeh_tutorial_example.ipynb  haniyeh_tutorial_example_data_like_aida.ipynb
docs/tutorials/: Lux-iterative-optimization.ipynb  Lux-linear-simulated-data.ipynb  Lux-simulated-data-underestimated-err.ipynb  Simulated-data-test.ipynb  helpers.py
notebooks/: Simple-model.ipynb  Simulated-data-test.ipynb
src/paton_nn/: model.py
src/pollux/: __init__.py  data.py  exceptions.py  models.py  typing.py
src/pollux/_src/: model_shared.py  run.py  shared.py  typing.py
src/pollux/_src/data/: __init__.py  data.py  preprocessor.py
src/pollux/_src/models/: __init__.py  cannon.py  lux.py  paton.py  pollux.py  transforms.py
src/pollux/data/: data.py  preprocessor.py
src/pollux/models/: __init__.py  cannon.py  iterative.py  lux.py  transforms.py
src/pollux/paton/: model.py
tests/: conftest.py  test_cannon.py  test_data.py  test_iterative.py  test_lux.py  test_package.py  test_preprocessor.py  test_transforms.py
tests/integration/: integration_test_helpers.py  test_infer_distance.py  test_infer_unknown_errors.py
