[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "pollux"
authors = [
  { name = "adrn", email = "adrian.prw@gmail.com" },
]
description = "JAX implementations of data-driven models for stellar spectroscopy"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.11"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "equinox",
  "jax",
  "jaxopt",
  "numpyro",
  "numpyro-ext",
  "typing-extensions",
  "xmmutablemap",
  "dataclassish"
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "jupyter_client",
  "matplotlib",
  "myst-nb>=1.1.2",
  "myst_parser>=0.13",
  "pytz>=2024.2",               # for copyright date
  "sphinx-book-theme==1.1.3",
  "sphinx-prompt>=1.8.0",
  "sphinx-tippy>=0.4.3",
  "sphinx>=7.0",
  "sphinx_autodoc_typehints>=3.0.0",
  "sphinx_copybutton>=0.5.2",
  "sphinx_design>=0.6.1",
  "sphinx_togglebutton>=0.3.2",
  "sphinxext-opengraph>=0.9.1",
  "sphinxext-rediraffe>=0.2.7",
]
dev = [
  "ipykernel",
  "nox",
  "pollux[test,docs]"
]

[project.urls]
Homepage = "https://github.com/adrn/pollux"
"Bug Tracker" = "https://github.com/adrn/pollux/issues"
Discussions = "https://github.com/adrn/pollux/discussions"
Changelog = "https://github.com/adrn/pollux/releases"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/pollux/_version.py"

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--arraydiff",
    "--showlocals",
    "--strict-markers",
    "--strict-config",
    "--doctest-glob='*.rst | *.py'",
  ]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["pollux"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.11"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pollux.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
]
ignore = [
  "PLC0206",  # Extracting value from dictionary without calling `.items()`
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "B905"      # zip() without explicit strict
]
# isort.required-imports = []
# Uncomment if using a _compat.typing backport
# typing-modules = ["pollux._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.11"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
